--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,6 +15,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 
 .footer {
@@ -70,12 +71,16 @@
 }
 
 .grid {
+  border-radius: 15;
+  margin: "30px 100px";
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   max-width: 800px;
   margin-top: 3rem;
+  border: "2px solid black";
 }
 
 .card {
@@ -113,9 +118,20 @@
   margin-left: 0.5rem;
 }
 
+.image {
+  margin-left: 0.5rem;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
 @media (max-width: 600px) {
   .grid {
-    width: 100%;
+    width: 90%;
     flex-direction: column;
   }
 }
