--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -85,6 +85,8 @@
 
 .card {
   margin: 1rem;
+  overflow: hidden;
+  flex-wrap: wrap;
   padding: 1.5rem;
   text-align: left;
   color: inherit;
@@ -92,7 +94,6 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
 }
 
 .card:hover,
@@ -122,16 +123,19 @@
   margin-left: 0.5rem;
 }
 
+.paper {
+  padding: "10px";
+  border: "2px solid black";
+  margin: "10px";
+}
+
+.video {
+  width: "550px";
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 90%;
-    flex-direction: column;
-  }
 }
